<resources>
    <string name="app_name">4hand考级通</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">登录</string>
    <string name="home">首页</string>
    <string name="Me_real_name">姓名</string>
    <string name="Me_nick_name">昵称</string>
    <string name="Me_sex">性别</string>
    <string name="Me_birth">生日</string>
    <string name="Me_major">专业</string>
    <string name="Me_motto">学习宣言</string>
    <string name="Name_prompt">真实姓名可以让老师和同学更容易找到你</string>
    <string name="Sex_male">女</string>
    <string name="Sex_man">男</string>
    <string name="Upload_video">上传视频</string>
    <string name="Upload_recording">上传音频</string>
    <string name="Upload_photos">上传照片</string>
    <string name="Share_playing">浏览量：</string>
    <string name="Share_like">点赞：</string>

    <!--网络请求错误-->
    <string name="Include_error_text">数据加载失败,点击重新加载</string>
    <string name="Include_error_load">正在加载中…</string>

    <string name="Nodata">暂无数据</string>
    <string name="Comment_sub">发表</string>
    <string name="Share_title">相关评论</string>
    <string name="Local_video">添加视频作品</string>
    <string name="Local_recording">添加钢琴录音</string>

    <!--照相-->
    <string name="Select_pic_camera">拍照</string>
    <string name="Select_pic_photo">从相册中选择</string>
    <string name="Select_pic_cancel">取消</string>
</resources>
