<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="match_parent"
              android:id="@+id/ll_main"
              android:layout_height="match_parent"
              android:background="@color/white_ef">
    <include layout="@layout/include_page_head"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="15dp"
            android:background="@color/while_fb"
            android:paddingBottom="15dp">
        <com.daomingedu.art.mvp.ui.widget.RoundImageView
                android:id="@+id/riv_me_head"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/avatar_default"/>
    </LinearLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="1dp"
            android:background="@color/while_fb">

        <Button
                android:id="@+id/btn_me_real_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/me_bg"
                android:drawableRight="@mipmap/arrow_right"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/Me_real_name"
                android:textColor="@color/black_1f"
                android:textSize="@dimen/text_15" />
        <TextView
                android:id="@+id/tv_me_real_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:singleLine="true"

                android:gravity="right"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp"
                android:textSize="@dimen/text_15"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="1dp"
            android:background="@color/while_fb">

        <Button
                android:id="@+id/btn_me_nick_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/me_bg"
                android:drawableRight="@mipmap/arrow_right"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/Me_nick_name"
                android:textColor="@color/black_1f"
                android:textSize="@dimen/text_15" />
        <TextView
                android:id="@+id/tv_me_nick_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:singleLine="true"

                android:gravity="right"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp"
                android:textSize="@dimen/text_15"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="1dp"
            android:background="@color/while_fb">

        <Button
                android:id="@+id/btn_me_sex"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/me_bg"
                android:drawableRight="@mipmap/arrow_right"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/Me_sex"
                android:textColor="@color/black_1f"
                android:textSize="@dimen/text_15" />
        <TextView
                android:id="@+id/tv_me_sex"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:gravity="right"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp"
                android:textSize="@dimen/text_15"/>
    </RelativeLayout>


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="1dp"
            android:background="@color/while_fb">

        <TextView
                android:id="@+id/tv_me_birth"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:gravity="right"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp"
                android:textSize="@dimen/text_15"/>

        <Button
                android:id="@+id/btn_me_birth"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/me_bg"
                android:drawableRight="@mipmap/arrow_right"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/Me_birth"
                android:textColor="@color/black_1f"
                android:textSize="@dimen/text_15"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="1dp"
            android:background="@color/while_fb">

        <Button
                android:id="@+id/btn_me_motto"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/me_bg"
                android:drawableRight="@mipmap/arrow_right"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/Me_motto"
                android:textColor="@color/black_1f"
                android:textSize="@dimen/text_15" />
        <TextView
                android:id="@+id/tv_me_motto"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:gravity="right"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp"
                android:textSize="@dimen/text_15"/>
    </RelativeLayout>
</LinearLayout>